spade-tests/src/snapshots/spade_tests__const_generics__enum_in_const_generic_where_clause_rhs.snap
---
source: spade-tests/src/const_generics.rs
---
enum E {}
fn test<T>()
    where T: E
{}


error: Unexpected type E, expected a trait
  ┌─ testinput:3:14
  │
1 │ enum E {}
  │ --------- Type E defined here
2 │ fn test<T>()
3 │     where T: E
  │              ^ Unexpected type
